fix: ui fixes and tweaks
* fix: missing on click handler for back to top arrow

* fix: stick footer to bottom by forcing content to grow

* fix: back to top transitions and positioning

* fix: always show main scrollbar (hover not working sometimes)

* fix: fade out last updated text

* fix: prevent back to top arrow to show on top of footer

* fix: force back to top to show above all elements

* fix: search input text

* fix: back to top position

* fix: search dark theme

--- a/docs/.vuepress/theme/styles/header.styl
+++ b/docs/.vuepress/theme/styles/header.styl
@@ -58,17 +58,15 @@ header.navbar .links {
 	border: none;
 }
 
-.search-box input {
-	background-image: url('/images/search.svg') !important;
-}
-
 header.navbar .links input {
 	font-family: inherit;
 	border-radius: 0;
 	border: 0;
-	color: $textColor;
-	background-color: $contentBgColor;
 	margin-top: 0.1em;
+
+	color: $accentTextColor;
+	background-color: $contentBgColor;
+	background-image: url('/images/search.svg') !important;
 }
 
 header.navbar .links ul {
@@ -79,7 +77,12 @@ header.navbar .links ul {
 		border-radius: 0;
 	}
 	.focused, li:active {
-		background-color: $layoutBgColor;
+		background-color: lighten($layoutBgColor, 10%);
+		
+		a {
+			width: 100%;
+			color: $highlightColor;
+		}
 	}
 	a {
 		color: $linkColor;
@@ -91,7 +94,7 @@ header.navbar .links ul {
 header.navbar .algolia-autocomplete {
 	.algolia-docsearch-suggestion--highlight {
 		color: $linkColor;
-		box-shadow: inset 0 -2px 0 0 alpha($linkColor, 80%);
+		box-shadow: inset 0 -2px 0 0 alpha($w3storage-purple, 80%) !important;
 	}
 
 	.algolia-docsearch-suggestion--title .aa-suggestion-title-separator {
